add SquareCard component and start styling

--- a/front/src/scss/base/common.scss
+++ b/front/src/scss/base/common.scss
@@ -1,5 +1,11 @@
+$font: 'Knockout', Arial, sans-serif;
+
 html {
     font-size: 62.5%;
+}
+
+body {
+    font-family: $font;
 }
 
 .page__content {
