--- a/front/src/scss/components/card.scss
+++ b/front/src/scss/components/card.scss
@@ -1,34 +1,37 @@
-.cards-container {
-    background: transparent;
+$fontCdn: 'KnockoutCdn', Arial, sans-serif;
 
-    .card {
-        margin: 8px 0;
-    }
+.square-card {
+    padding: 0;
+    width: 50%;
+    
+    .photo {
+        position: relative;
+        width: 100%;
+        overflow: hidden;
 
-    .card__title {
-        font-size: 1.4rem;
-        line-height: 1.2;
-        text-align: left;
-    }
+        &::before {
+            content: '';
+            display: block;
+            padding-top: 53%;
+        }
 
-    .list-item {
-        padding-left: 0;
-    }
-}
-
-.square-cards {
-    display: flex;
-
-    .list-item {
-        //width: 50%;
-
-        &:nth-child(2n+2){
-            padding-left: 20px;
+        img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            max-width: 100%;
         }
     }
 
-    .card__title {
-        
+    .meal {
+        .infos {
+            padding: 3%;
+            background: #F48632;
+        }
+        .desc {
+            border: 2px solid #F48632;
+        }
     }
 }
 
