--- a/front/src/scss/main.scss
+++ b/front/src/scss/main.scss
@@ -1,4 +1,6 @@
+@import 'base/settings';
 @import 'base/common';
 @import 'base/titles';
 
 @import 'components/card';
+@import 'components/ctabbar';
