--- a/front/src/scss/components/ctabbar.scss
+++ b/front/src/scss/components/ctabbar.scss
@@ -2,16 +2,18 @@
   display: flex;
   position: fixed;
   margin: auto;
+  max-width: 250px;
   left: 0;
   right: 0;
   bottom: 2rem;
   background: #fff;
-  max-width: 220px;
   border-radius: 25px;
 }
 
 .ctabbar__link {
   display: flex;
+  width: 30%;
+  justify-content: center;
   align-items: center;
   padding: 1rem 1.5rem;
   color: $main-color;
