--- a/front/src/scss/base/settings.scss
+++ b/front/src/scss/base/settings.scss
@@ -1,1 +1,7 @@
+// COLORS
 $main-color: #F48632;
+$white: #FFF;
+
+// FONTS
+$font: 'Knockout', Arial, sans-serif;
+$fontCdn: 'KnockoutCdn', Arial, sans-serif;
