--- a/front/src/scss/main.scss
+++ b/front/src/scss/main.scss
@@ -3,5 +3,6 @@
 @import 'base/fonts';
 @import 'base/titles';
 
+@import 'components/header';
 @import 'components/card';
 @import 'components/ctabbar';
