--- a/front/src/scss/components/card.scss
+++ b/front/src/scss/components/card.scss
@@ -1,8 +1,14 @@
-$fontCdn: 'KnockoutCdn', Arial, sans-serif;
+
 
 .square-card {
     padding: 0;
     width: 50%;
+    font: {
+        family: $font;
+        size: 1rem;
+    }
+    border-radius: 0;
+    box-shadow: none;
     
     .photo {
         position: relative;
@@ -24,13 +30,40 @@ $fontCdn: 'KnockoutCdn', Arial, sans-serif;
         }
     }
 
-    .meal {
-        .infos {
-            padding: 3%;
-            background: #F48632;
+    .infos {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 3% 5%;
+        color: $white;
+        background: $main-color;
+    }
+    .infos__date {
+        text-align: left;
+        line-height: 1.2rem;
+        letter-spacing: 0.07em;
+    }
+    .infos__hour {
+        display: block;
+    }
+    .infos__plates {
+        font: {
+            family: $fontCdn;
+            size: 2.4rem;
         }
-        .desc {
-            border: 2px solid #F48632;
+        line-height: 1;
+    }
+
+    .desc {
+        padding: 5%;
+        font-size: 1.4rem;
+        line-height: 1.6rem;
+        letter-spacing: 0.1em;
+        text-align: left;
+        border: 2px solid $main-color;
+
+        span {
+            font-weight: 500;
         }
     }
 }
