--- a/front/src/scss/base/titles.scss
+++ b/front/src/scss/base/titles.scss
@@ -1,3 +1,21 @@
+.page__content .headbar h1 {
+    margin: 0;
+    padding: 15px 20px;
+    font: {
+        family: $fontCdn;
+        size: 3.4rem;
+        weight: 400;
+    }
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: $white;
+
+    .city {
+        font-weight: 500;
+        text-decoration: underline;
+    }
+}
+
 .list-title {
     margin: 50px 0 0;
     font-size: 2.8rem;
