--- a/front/src/scss/main.scss
+++ b/front/src/scss/main.scss
@@ -1,8 +1,17 @@
 @import 'base/settings';
+@import 'base/reset';
 @import 'base/common';
 @import 'base/fonts';
 @import 'base/titles';
+@import 'base/mixins';
 
 @import 'components/header';
 @import 'components/card';
 @import 'components/ctabbar';
+@import 'components/headpage';
+@import 'components/user';
+@import 'components/quote';
+@import 'components/list';
+@import 'components/tag';
+
+@import 'pages/meal';
