--- a/front/src/scss/base/titles.scss
+++ b/front/src/scss/base/titles.scss
@@ -17,6 +17,17 @@
 }
 
 .list-title {
-    margin: 50px 0 0;
+    margin: 50px 0 25px 0;
     font-size: 2.8rem;
-} 
+    padding-left: 0;
+}
+
+.list-title__title {
+  text-transform: uppercase;
+  font-family: $fontCdn;
+  font-size: 3rem;
+  font-weight: 400;
+  padding-left: 0;
+  padding-bottom: 5px;
+  border-bottom: 2px solid $main-color;
+}
