--- a/front/src/scss/base/settings.scss
+++ b/front/src/scss/base/settings.scss
@@ -6,3 +6,16 @@ $white: #FFF;
 // FONTS
 $font: 'Knockout', Arial, sans-serif;
 $fontCdn: 'KnockoutCdn', Arial, sans-serif;
+
+$fregular: 400;
+$fmedium: 500;
+
+$lspacing: 1.5px;
+$lspacing-2: .71px;
+
+$size-1: 3.4rem;
+$size-2: 2.5rem;
+
+// MARGINS
+
+$sideMargin: 20px;
