--- a/front/src/scss/main.scss
+++ b/front/src/scss/main.scss
@@ -2,8 +2,10 @@
 @import 'base/reset';
 @import 'base/common';
 @import 'base/fonts';
-@import 'base/titles';
 @import 'base/mixins';
+@import 'base/titles';
+@import 'base/buttons';
+@import 'base/links';
 
 @import 'components/header';
 @import 'components/card';
@@ -13,5 +15,7 @@
 @import 'components/quote';
 @import 'components/list';
 @import 'components/tag';
+@import 'components/field';
 
 @import 'pages/meal';
+@import 'pages/mealform';
