--- a/front/src/scss/components/ctabbar.scss
+++ b/front/src/scss/components/ctabbar.scss
@@ -6,7 +6,7 @@
   left: 0;
   right: 0;
   bottom: 2rem;
-  background: #fff;
+  background: $white;
   border-radius: 25px;
   z-index: 20;
   @include shadow--huge();
