--- a/front/src/scss/base/buttons.scss
+++ b/front/src/scss/base/buttons.scss
@@ -3,22 +3,27 @@
 }
 
 .btn {
+  @include title-lvl-1();
+  padding: .5rem 2rem;
+  letter-spacing: $lspacing;
   margin-bottom: 1rem;
+  border-radius: 25px;
+  width: 200px;
 }
 
 .btn__orange--shadow {
   @extend .btn;
-  width: 200px;
-  text-transform: uppercase;
-  font-family: $fontCdn;
-  background: $main-color;
-  color: #fff;
-  font-size: $size-1;
-  padding: .5rem 2rem;
+  color: $white;
   border: none;
-  border-radius: 25px;
-  letter-spacing: $lspacing;
+  background: $main-color;
   @include shadow--huge();
+}
+
+.btn__white--empty {
+  @extend .btn;
+  background: none;
+  color: $white;
+  border: 2px solid $white;
 }
 
 .btn__fab {
