--- a/front/src/scss/components/tag.scss
+++ b/front/src/scss/components/tag.scss
@@ -1,10 +1,11 @@
 .tag__list {
   display: flex;
+  margin-bottom: 2.5rem;
 
-  .tag:last-child {
+}
 
-  }
-
+.tag__list {
+  margin-bottom: 2.5rem;
 }
 
 .tag {
