--- a/front/src/scss/main.scss
+++ b/front/src/scss/main.scss
@@ -16,7 +16,10 @@
 @import 'components/list';
 @import 'components/tag';
 @import 'components/field';
+@import 'components/proposition';
+@import 'components/guest';
 
 @import 'pages/meal';
 @import 'pages/mealform';
 @import 'pages/end-message';
+@import 'pages/meal-invitations';
