--- a/front/src/scss/base/buttons.scss
+++ b/front/src/scss/base/buttons.scss
@@ -19,11 +19,27 @@
   @include shadow--huge();
 }
 
+/**
+ * EMPTY STYLE
+ * @type {[type]}
+ */
+
 .btn__white--empty {
   @extend .btn;
   background: none;
   color: $white;
   border: 2px solid $white;
+}
+
+.btn__orange--empty {
+  border: 2px solid $main-color;
+  background: none;
+  font-size: $size-2;
+  width: 40px;
+  height: 40px;
+  border-radius: 25px;
+  text-align: center;
+  color: $main-color;
 }
 
 .btn__fab {
