loop and data binding square cards + font icons + some cleaning after removing onsen ui

--- a/front/src/scss/main.scss
+++ b/front/src/scss/main.scss
@@ -8,7 +8,7 @@
 @import 'base/links';
 
 @import 'components/header';
-@import 'components/card';
+@import 'components/square-card';
 @import 'components/ctabbar';
 @import 'components/headpage';
 @import 'components/user';
