--- a/front/src/scss/base/fonts.scss
+++ b/front/src/scss/base/fonts.scss
@@ -55,3 +55,60 @@
     font-weight: 500;
     font-style: normal;
 }
+
+/**
+ * ICOMOON ICONS
+ */
+
+ @font-face {
+    font-family: 'icomoon';
+    src:  url('../assets/fonts/icomoon.eot?sa3vhx');
+    src:  url('../assets/fonts/icomoon.eot?sa3vhx#iefix') format('embedded-opentype'),
+      url('../assets/fonts/icomoon.ttf?sa3vhx') format('truetype'),
+      url('../assets/fonts/icomoon.woff?sa3vhx') format('woff'),
+      url('../assets/fonts/icomoon.svg?sa3vhx#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-add-event .path1:before {
+    content: "\e904";
+    color: rgb(255, 255, 255);
+  }
+  .icon-add-event .path2:before {
+    content: "\e905";
+    margin-left: -1.5em;
+    color: rgb(244, 134, 50);
+  }
+  .icon-reservation:before {
+    content: "\e900";
+    color: #f48632;
+  }
+  .icon-user:before {
+    content: "\e901";
+    color: #f48632;
+  }
+  .icon-arrow-back:before {
+    content: "\e902";
+    color: #fff;
+  }
+  .icon-fork-knife:before {
+    content: "\e903";
+    color: #fff;
+  }
+  
