--- a/front/src/scss/base/reset.scss
+++ b/front/src/scss/base/reset.scss
@@ -1,14 +1,19 @@
 * {
   padding: 0;
   margin: 0;
-  color: $body-color;
-  font-family: $font;
-  font-size: 1.4rem;
-  line-height: 1.3;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 html {
     font-size: 62.5%;
+}
+
+body {
+  color: $body-color;
+  font-family: $font;
+  font-size: 1.4rem;
+  line-height: 1.3;
 }
 
 a {
