--- a/front/src/scss/base/titles.scss
+++ b/front/src/scss/base/titles.scss
@@ -1,18 +1,15 @@
-.page__content .headbar h1 {
+.headbar h1 {
     margin: 0;
     padding: 15px 20px;
-    font: {
-        family: $fontCdn;
-        size: 3.4rem;
-        weight: 400;
-    }
+    font-family: $fontCdn;
+    font-size: 3.4rem;
+    font-weight: 400;
     letter-spacing: 0.05em;
     text-transform: uppercase;
     color: $white;
 
-    .city {
+    .headbar__city {
         font-weight: 500;
-        text-decoration: underline;
     }
 }
 
