--- a/front/src/scss/base/titles.scss
+++ b/front/src/scss/base/titles.scss
@@ -5,6 +5,7 @@
     font-size: 3.4rem;
     font-weight: 400;
     letter-spacing: 0.05em;
+    line-height: 1;
     text-transform: uppercase;
     color: $white;
 
