--- a/front/src/scss/main.scss
+++ b/front/src/scss/main.scss
@@ -7,7 +7,7 @@
 @import 'base/buttons';
 @import 'base/links';
 
-@import 'components/header';
+@import 'components/headbar';
 @import 'components/square-card';
 @import 'components/ctabbar';
 @import 'components/headpage';
