--- a/front/src/scss/components/ctabbar.scss
+++ b/front/src/scss/components/ctabbar.scss
@@ -33,6 +33,13 @@
 
 }
 
+.ctabbar__label {
+  text-transform: uppercase;
+  font-family: $fontCdn;
+  letter-spacing: $lspacing-2;
+  font-size: 1.7rem;
+}
+
 .ctabbar__icon {
 
 }
