--- a/front/src/scss/components/headpage.scss
+++ b/front/src/scss/components/headpage.scss
@@ -27,7 +27,8 @@
 .headpage__reminder {
   font-weight: 500;
   font-size: 1.4rem;
-  @include text-with-border(#000);
+  @include text-with-border($white);
+  color: $white;
   font-family: $font;
 }
 
@@ -43,14 +44,21 @@
 .headpage__title {
     margin: 0;
     @include title-lvl-1();
+    color: $white;
 }
 
 .headpage__subtitles {
   display: flex;
   justify-content: space-between;
+  color: $white;
 }
 
 .headpage__subtitle {
   margin: 0;
   @include title-lvl-2();
+  color: $white;
+}
+
+.headpage__icon {
+  font-size: 1.8rem;
 }
