icons added on customer pathway

--- a/front/src/scss/components/list.scss
+++ b/front/src/scss/components/list.scss
@@ -5,5 +5,9 @@
 
 .list__item {
   margin-bottom: .8rem;
-  padding-left: 20px;
+}
+
+.list__item-icon {
+  font-size: 9px;
+  margin-right: 10px;
 }
