--- a/front/src/scss/base/fonts.scss
+++ b/front/src/scss/base/fonts.scss
@@ -86,28 +86,51 @@
     -moz-osx-font-smoothing: grayscale;
   }
 
-  .icon-add-event .path1:before {
-    content: "\e904";
-    color: rgb(255, 255, 255);
-  }
-  .icon-add-event .path2:before {
-    content: "\e905";
-    margin-left: -1.5em;
-    color: rgb(244, 134, 50);
-  }
-  .icon-reservation:before {
-    content: "\e900";
-    color: #f48632;
-  }
-  .icon-user:before {
-    content: "\e901";
-    color: #f48632;
-  }
-  .icon-arrow-back:before {
-    content: "\e902";
-    color: #fff;
-  }
-  .icon-fork-knife:before {
-    content: "\e903";
-    color: #fff;
-  }
+  .icon-checked:before {
+  content: "\e906";
+  color: #f48632;
+}
+.icon-heart:before {
+  content: "\e907";
+  color: #f48632;
+}
+.icon-pencil:before {
+  content: "\e908";
+  color: #fff;
+}
+.icon-quotes-left:before {
+  content: "\e909";
+  color: #f48632;
+}
+.icon-quotes-right:before {
+  content: "\e90a";
+  color: #f48632;
+}
+.icon-star:before {
+  content: "\e90b";
+}
+.icon-add-event .path1:before {
+  content: "\e904";
+  color: rgb(255, 255, 255);
+}
+.icon-add-event .path2:before {
+  content: "\e905";
+  margin-left: -1.5em;
+  color: rgb(244, 134, 50);
+}
+.icon-reservation:before {
+  content: "\e900";
+  color: #f48632;
+}
+.icon-user:before {
+  content: "\e901";
+  color: #f48632;
+}
+.icon-arrow-back:before {
+  content: "\e902";
+  color: #fff;
+}
+.icon-fork-knife:before {
+  content: "\e903";
+  color: #fff;
+}
