--- a/front/src/scss/main.scss
+++ b/front/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import 'base/links';
 
 @import 'components/headbar';
+@import 'components/stars';
 @import 'components/square-card';
 @import 'components/ctabbar';
 @import 'components/headpage';
