new icons and otters added

--- a/front/src/scss/base/fonts.scss
+++ b/front/src/scss/base/fonts.scss
@@ -90,6 +90,14 @@
   content: "\e906";
   color: #f48632;
 }
+.icon-plus:before {
+  content: "\e90c";
+  color: #f48632;
+}
+.icon-checked:before {
+  content: "\e906";
+  color: #f48632;
+}
 .icon-heart:before {
   content: "\e907";
   color: #f48632;
