--- a/front/src/scss/base/buttons.scss
+++ b/front/src/scss/base/buttons.scss
@@ -44,9 +44,11 @@
 }
 
 .sqbtn__orange--empty {
-
   width: 40px;
   height: 40px;
+  background: none;
+  border: 2px solid $main-color;
+  border-radius: 25px;
 }
 
 .btn__fab {
