--- a/front/src/scss/components/proposition.scss
+++ b/front/src/scss/components/proposition.scss
@@ -1,6 +1,26 @@
 .proposition {
   padding-bottom: 1.5rem;
   border-bottom: 2px solid $main-color;
+
+  .guest__icon i {
+    font-size: 2.5rem;
+    margin-left: 5px;
+  }
+
+  .btn__orange--close {
+    font-size: 1.7rem;
+    color: $main-color;
+    font-weight: $fmedium;
+    margin-right: 17px;
+    transform: rotate(45deg);
+  }
+
+  .actions {
+    display: flex;
+    // a small quick and dirty fix
+    margin-top: -15px;
+    align-items: center;
+  }
 }
 
 .proposition__stack {
