--- a/front/src/scss/components/square-card.scss
+++ b/front/src/scss/components/square-card.scss
@@ -48,6 +48,7 @@
         top: 0;
         left: 0;
         right: 0;
+        width: 100%;
         max-width: 100%;
     }
 }
@@ -64,6 +65,7 @@
 .sq-card__infos .date {
     font-weight: 400;
     text-align: left;
+    text-transform: uppercase;
     letter-spacing: 0.07em;
 }
 .sq-card__infos .icon-fork-knife {
